new: movementServiceLogic and refactor simulation